--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'http://repo1.maven.org/maven2' }
+    }
+    repositories {
         google()
         jcenter()
     }
